modify for our specific setup

--- a/ntp/ntp-client.conf
+++ b/ntp/ntp-client.conf
@@ -1,8 +1,6 @@
 # This file managed by Salt, do not edit
 #
 #
-# With the default settings below, ntpd will only synchronize your clock.
-
 {% set ntpservers = salt['pillar.get']('ntp:servers', [
 	'0.pool.ntp.org',
 	'1.pool.ntp.org',
@@ -11,12 +9,24 @@
 # Associate to public NTP pool servers; see http://www.pool.ntp.org/
 {% for ntpserver in ntpservers -%}
 server {{ ntpserver }}
+restrict {{ ntpserver }} nomodify
 {% endfor %}
 
 # Only allow read-only access from localhost
-restrict default noquery nopeer
+restrict -4 default	kod nomodify notrap nopeer noquery
+restrict -6 default	kod nomodify notrap nopeer noquery
+restrict 10.0.0.0	mask 255.0.0.0		nopeer
+restrict 172.16.0.0	mask 255.240.0.0	nopeer
+restrict 192.168.0.0	mask 255.255.0.0	nopeer
+# allow inquiry tools on this host
 restrict 127.0.0.1
-restrict ::1
+
+statistics loopstats peerstats clockstats
+filegen loopstats file loopstats type day enable
+filegen peerstats file peerstats type day enable
+filegen clockstats file clockstats type day enable
+
+tinker panic 0
 
 # Location of drift file
 driftfile /var/lib/ntp/ntp.drift
