modifications for deterministic overrides in pillar data

--- a/ntp/ntp-client.conf
+++ b/ntp/ntp-client.conf
@@ -1,13 +1,9 @@
+{% from "ntp/map.jinja" import ntp with context %}
 # This file managed by Salt, do not edit
 #
 #
-{% set ntpservers = salt['pillar.get']('ntp:servers', [
-	'0.pool.ntp.org',
-	'1.pool.ntp.org',
-	'2.pool.ntp.org'
-]) %}
 # Associate to public NTP pool servers; see http://www.pool.ntp.org/
-{% for ntpserver in ntpservers -%}
+{% for ntpserver in ntp.servers -%}
 server {{ ntpserver }}
 restrict {{ ntpserver }} nomodify
 {% endfor %}
