--- a/ntp/ntp.conf
+++ b/ntp/ntp.conf
@@ -1,22 +1,33 @@
-# This file managed by Salt, do not edit
-#
-#
-{% set ntpservers = salt['pillar.get']('ntp:servers', [
-	'0.pool.ntp.org',
-	'1.pool.ntp.org',
-	'2.pool.ntp.org'
-]) %}
+{% from "ntp/map.jinja" import ntp with context %}
+
 # Associate to public NTP pool servers; see http://www.pool.ntp.org/
-{% for ntpserver in ntpservers -%}
+{% for ntpserver in ntp.servers -%}
 server {{ ntpserver }}
-{% endfor %}
+restrict {{ ntpserver }} nomodify
+{% endfor %} 
 
-# Only allow read-only access from localhost
-restrict default kod nomodify
-restrict -6 default kod nomodify
+{% for ntppeer in ntp.peers -%}
+peer {{ ntppeer }}
+restrict {{ ntppeer }}
+{% endfor %} 
 
-# Location of drift file
-driftfile /var/lib/ntp/ntp.drift
 
-# NOTE: If you run dhcpcd and have lines like 'restrict' and 'fudge' appearing
-# here, be sure to add '-Y -N' to the dhcpcd_ethX variables in /etc/conf.d/net
+restrict -4 default	kod nomodify notrap nopeer noquery
+restrict -6 default	kod nomodify notrap nopeer noquery
+restrict 10.0.0.0	mask 255.0.0.0		nopeer
+restrict 172.16.0.0	mask 255.240.0.0	nopeer
+restrict 192.168.0.0	mask 255.255.0.0	nopeer
+# allow inquiry tools on this host
+restrict 127.0.0.1
+
+statistics loopstats peerstats clockstats
+filegen loopstats file loopstats type day enable
+filegen peerstats file peerstats type day enable
+filegen clockstats file clockstats type day enable
+
+#fudge	127.127.1.0 stratum 10
+
+tinker panic 0
+
+driftfile /var/lib/ntp/drift
+# monitor yes
